--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <button class="btn btn-default"></button>
       </div>
 
       <hr>
@@ -89,5 +88,7 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!--Script which implements dynamic body class on body depending on browser you are on!-->
+    <script src="js/dynamicBodyClass.js"></script>
   </body>
 </html>
