--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- <link rel="icon" href="../../favicon.ico"> -->
-    <link rel="shortcut icon" type="image/png" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
     <title>Jumbotron Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
