setting up workspace

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Latest compiled and minified Bootstrap JavaScript -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Custom style of the project -->
-    <link rel="stylesheet" href="dev-css/main.css">
+    <link rel="stylesheet" href="prod-css/main.css">
 
   </head>
 
