--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Title of the project -->
-    <title>Online Store</title>
+    <title>Online Web Store</title>
     <!-- jQuery library -->
     <script src="js/jquery-slim.min.js"></script>
     <!--Implementing script for showing tolltips-->
