--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>Online Web Store</title>
     <!-- jQuery library -->
     <script src="js/jquery-slim.min.js"></script>
-    <!-- Latest compiled and minified Bootstrap JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
     <!--Implementing script for showing tolltips-->
     <script src="js/tether.min.js"></script>
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
-    </script>
+    </script>s
+    <!-- Latest compiled and minified Bootstrap JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
     <!-- Custom style of the project -->
     <link rel="stylesheet" href="prod-css/main.css">
 
