--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
-    </script>s
+    </script>
     <!-- Latest compiled and minified Bootstrap JavaScript -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Custom style of the project -->
