--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <title>Online Web Store</title>
     <!-- jQuery library -->
     <script src="js/jquery-slim.min.js"></script>
+    <!-- Dynamic body class script -->
+    <script src="js/dynamic-body-class.js"></script>
+    <!-- Poper library -->
+    <script src="js/popper.min.js"></script>
     <!--Implementing script for showing tolltips-->
-    <script src="js/tether.min.js"></script>
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
@@ -27,7 +30,7 @@
 
     <nav>
 
-      <button class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Tooltip on top">steva</button>
+      <button class="btn btn-primary" data-toggle="tooltip" data-placement="right" title="Tooltip on top">steva</button>
 
     </nav>
 
