--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- Custom style of the project -->
     <link rel="stylesheet" href="prod-css/main.css">
-
+    <!-- Insert favicon -->
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
   </head>
 
   <body>
