--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             $('[data-toggle="tooltip"]').tooltip()
         })
     </script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
   </head>
 
