--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             $('[data-toggle="tooltip"]').tooltip()
         })
     </script>
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="profile.ico">
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
 
   </head>
 
