--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="js/popper.min.js"></script>
     <!-- Latest compiled and minified Bootstrap JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    <!-- Insert dynamic body class script -->
+    <script src="js/dynamicBodyClass.js"></script>
     <!-- Custom style of the project -->
     <link rel="stylesheet" href="prod-css/main.css">
     <!-- Awoke tooltips globaly -->
@@ -26,6 +28,6 @@
   </head>
 
   <body>
-    <button class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Test za tooltip</button>
+
   </body>
 </html>
