--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Online Store</title>
     <!-- jQuery library -->
     <script src="js/jquery-slim.min.js"></script>
+    <script src="js/jquery.js"></script>
     <!-- Poper.js library -->
     <script src="js/popper.min.js"></script>
     <!-- Latest compiled and minified Bootstrap JavaScript -->
@@ -16,7 +17,7 @@
     <!-- Insert dynamic body class script -->
     <script src="js/dynamicBodyClass.js"></script>
     <!-- Custom style of the project -->
-    <link rel="stylesheet" href="prod-css/main.css">
+    <link rel="stylesheet" href="dev-css/main.css">
     <!-- Awoke tooltips globaly -->
     <script>
         $(function () {
@@ -27,7 +28,35 @@
 
   </head>
 
+
   <body>
-    <div>Steva je najbolji car na svetu</div>
+
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Launch demo modal
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   </body>
 </html>
