--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
   <!-- Button trigger modal -->
   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Launch demo modal
+    Normalan
   </button>
+  <button type="button" class="btn btn-primary disabled">Disejblovan</button>
 
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
