--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Latest compiled and minified Bootstrap JavaScript -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Insert dynamic body class script -->
-    <script src="js/dynamicBodyClass.js"></script>
+    <script src="js/dynamic-body-class.js"></script>
     <!-- Custom style of the project -->
     <link rel="stylesheet" href="dev-css/main.css">
     <!-- Awoke tooltips globaly -->
