--- a/index.html
+++ b/index.html
@@ -30,42 +30,41 @@
 
 
   <body>
-    <div class="os-wrapper">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <div class=" container-fluid os-wrapper">
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
+      <div class="container">
+
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+
+          <a class="navbar-brand" href="#">Logo</a>
+
+          <ul class="navbar-nav">
+
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+
+              <a class="nav-link" href="#">Link 1</a>
+
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
+
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
+
+              <a class="nav-link" href="#">Link 2</a>
+
             </li>
+
+            <li class="nav-item">
+
+              <a class="nav-link" href="#">Link 3</a>
+
+            </li>
+
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
+
+        </nav>
+
+      </div>
+
     </div>
+
   </body>
 </html>
