--- a/index.html
+++ b/index.html
@@ -30,39 +30,72 @@
 
 
   <body>
-    <div class=" container-fluid os-wrapper">
+    <div class="os-wrapper">
 
-      <div class="container">
+        <nav class="navbar navbar-dark">
 
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 
-          <a class="navbar-brand" href="#">Logo</a>
+
+            <a class="navbar-brand" href="#">JEWLERY<span>store</span></a>
+
+            <ul class="navbar-nav">
+
+              <li class="nav-item">
+
+                <a class="nav-link" href="#">Link 1</a>
+
+              </li>
+
+              <li class="nav-item">
+
+                <a class="nav-link" href="#">Link 2</a>
+
+              </li>
+
+              <li class="nav-item">
+
+                <a class="nav-link" href="#">Link 3</a>
+
+              </li>
+
+            </ul>
 
           <ul class="navbar-nav">
 
             <li class="nav-item">
 
-              <a class="nav-link" href="#">Link 1</a>
+              <a class="nav-link" href="#">
+
+                <span class="fa fa-facebook-official"></span>
+
+              </a>
 
             </li>
 
             <li class="nav-item">
 
-              <a class="nav-link" href="#">Link 2</a>
+              <a class="nav-link" href="#">
+
+                <span class="fa fa-twitter"></span>
+
+              </a>
 
             </li>
 
             <li class="nav-item">
 
-              <a class="nav-link" href="#">Link 3</a>
+              <a class="nav-link" href="#">
+
+                <span class="fa fa-linkedin"></span>
+
+              </a>
 
             </li>
 
           </ul>
 
-        </nav>
 
-      </div>
+        </nav>
 
     </div>
 
