--- a/index.html
+++ b/index.html
@@ -30,74 +30,21 @@
 
 
   <body>
-    <div class="os-wrapper">
 
-        <nav class="navbar navbar-dark">
-
-
-
-            <a class="navbar-brand" href="#">JEWLERY<span>store</span></a>
-
-            <ul class="navbar-nav">
-
-              <li class="nav-item">
-
-                <a class="nav-link" href="#">Link 1</a>
-
-              </li>
-
-              <li class="nav-item">
-
-                <a class="nav-link" href="#">Link 2</a>
-
-              </li>
-
-              <li class="nav-item">
-
-                <a class="nav-link" href="#">Link 3</a>
-
-              </li>
-
-            </ul>
-
-          <ul class="navbar-nav">
-
-            <li class="nav-item">
-
-              <a class="nav-link" href="#">
-
-                <span class="fa fa-facebook-official"></span>
-
-              </a>
-
-            </li>
-
-            <li class="nav-item">
-
-              <a class="nav-link" href="#">
-
-                <span class="fa fa-twitter"></span>
-
-              </a>
-
-            </li>
-
-            <li class="nav-item">
-
-              <a class="nav-link" href="#">
-
-                <span class="fa fa-linkedin"></span>
-
-              </a>
-
-            </li>
-
+    <div class="container-fluid os-wrapper d-flex">
+      <nav class="navbar navbar-dark d-block">
+        <div class="container">
+          <a class="logo">JEWLERY<span>store</span></a>
+          <ul class="navbar">
+            <li>1</li>
+            <li>2</li>
           </ul>
+        </div>
 
-
-        </nav>
+      </nav>
 
     </div>
 
   </body>
+
 </html>
