--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
 
 
   <body>
-    <div class="os-wrapper"></div>
+
+    <div class="os-wrapper">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="btn btn-primary" data-toggle="tooltip" data-placement="right" title="Tooltip on top">sadsas</button>
+      </nav>
+    </div>
+
   </body>
 
 </html>
