--- a/index.html
+++ b/index.html
@@ -31,10 +31,32 @@
 
   <body>
 
-    <div class="os-wrapper">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button class="btn btn-primary" data-toggle="tooltip" data-placement="right" title="Tooltip on top">sadsas</button>
+    <div class="container-fluid os-wrapper">
+
+      <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+
+          <div class="container">
+
+              <ul class="navbar-nav">
+
+                <li>
+
+                  <a class="btn btn-primary">steva</a>
+
+                </li>
+
+                <li>
+
+                  <a class="btn btn-primary">steva</a>
+
+                </li>
+
+              </ul>
+
+          </div>
+
       </nav>
+        <div class="container"><a class="btn btn-primary">steva</a></div>
     </div>
 
   </body>
