--- a/index.html
+++ b/index.html
@@ -37,17 +37,65 @@
 
           <div class="container">
 
+              <a class="navbar-brand">JEWLERY<span>store</span></a>
+
               <ul class="navbar-nav">
 
-                <li>
+                <li class="nav-item">
 
-                  <a class="btn btn-primary">steva</a>
+                  <a class="btn">Home</a>
 
                 </li>
 
                 <li>
 
-                  <a class="btn btn-primary">steva</a>
+                  <a class="btn">Shoping cart</a>
+
+                </li>
+
+                <li>
+
+                  <a class="btn">Store</a>
+
+                </li>
+
+                <li>
+
+                  <a class="btn">Contact</a>
+
+                </li>
+
+              </ul>
+
+              <ul class="navbar-nav">
+
+                <li class="nav-item">
+
+                  <span class="btn fa fa-facebook-official"></span>
+
+                </li>
+
+                <li class="nav-item">
+
+                  <span class="btn fa fa-google-plus-official"></span>
+
+                </li>
+
+                <li class="nav-item">
+
+                  <span class="btn fa fa-linkedin-square"></span>
+
+                </li>
+
+                <li class="nav-item">
+
+                  <span class="btn fa fa-twitter-square"></span>
+
+                </li>
+
+                <li class="nav-item">
+
+                  <a class="btn">Login</a>
 
                 </li>
 
@@ -56,7 +104,7 @@
           </div>
 
       </nav>
-        <div class="container"><a class="btn btn-primary">steva</a></div>
+
     </div>
 
   </body>
