--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
           <div class="container">
 
-              <a class="navbar-brand">JEWLERY<span>store</span></a>
+              <a class="navbar-brand btn">JEWLERY<span>store</span></a>
 
               <ul class="navbar-nav">
 
