--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
 
           <div class="container">
 
-              <a class="navbar-brand btn">JEWLERY<span>store</span></a>
+              <a class="navbar-brand btn os-btn-plain" href="#">JEWLERY<span>store</span></a>
 
               <ul class="navbar-nav">
 
                 <li class="nav-item">
 
-                  <a class="btn">Home</a>
+                  <a class="btn os-btn-plain" href="#">Home</a>
 
                 </li>
 
                 <li>
 
-                  <a class="btn">Shoping cart</a>
+                  <a class="btn os-btn-plain" href="#">Shoping cart</a>
 
                 </li>
 
                 <li>
 
-                  <a class="btn">Store</a>
+                  <a class="btn os-btn-plain" href="#">Store</a>
 
                 </li>
 
                 <li>
 
-                  <a class="btn">Contact</a>
+                  <a class="btn os-btn-plain" href="#">Contact</a>
 
                 </li>
 
@@ -71,31 +71,31 @@
 
                 <li class="nav-item">
 
-                  <span class="btn fa fa-facebook-official"></span>
+                  <a class="btn os-btn-plain fa fa-facebook-official" href="#"></a>
 
                 </li>
 
                 <li class="nav-item">
 
-                  <span class="btn fa fa-google-plus-official"></span>
+                  <a class="btn os-btn-plain fa fa-google-plus-official" href="#"></a>
 
                 </li>
 
                 <li class="nav-item">
 
-                  <span class="btn fa fa-linkedin-square"></span>
+                  <a class="btn os-btn-plain fa fa-linkedin-square" href="#"></a>
 
                 </li>
 
                 <li class="nav-item">
 
-                  <span class="btn fa fa-twitter-square"></span>
+                  <a class="btn os-btn-plain fa fa-twitter-square" href="#"></a>
 
                 </li>
 
                 <li class="nav-item">
 
-                  <a class="btn">Login</a>
+                  <a class="btn os-btn-plain" href="#">Login</a>
 
                 </li>
 
