removing btn boxshadow on focus

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
                 </li>
 
-                <li>
+                <li class="nav-item">
 
-                  <a class="btn os-btn-plain" href="#">Shoping cart</a>
+                  <a class="btn os-btn-plain dropdown-toggle" href="#">Shoping cart</a>
 
                 </li>
 
