--- a/index.html
+++ b/index.html
@@ -32,79 +32,79 @@
 
   <body>
 
-    <!--<div class="container-fluid os-wrapper">-->
+    <div class="container-fluid os-wrapper">
 
-      <!--<nav class="navbar fixed-top navbar-dark bg-dark">-->
+      <nav class="navbar navbar-expand fixed-top navbar-dark bg-dark">
 
-          <!--<div class="container">-->
+          <div class="container">
 
-              <!--<a class="navbar-brand btn os-btn-plain" href="#">JEWLERY<span>store</span></a>-->
+              <a class="navbar-brand btn os-btn-plain" href="#">JEWLERY<span>store</span></a>
 
-              <!--<ul class="navbar-nav">-->
+              <ul class="navbar-nav">
 
-                <!--<li class="nav-item">-->
+                <li class="nav-item">
 
-                  <!--<a class="btn os-btn-plain" href="#">Home</a>-->
+                  <a class="btn os-btn-plain" href="#">Home</a>
 
-                <!--</li>-->
+                </li>
 
-                <!--<li class="nav-item">-->
+                <li class="nav-item">
 
-                  <!--<a class="btn os-btn-plain dropdown-toggle" href="#">Shoping cart</a>-->
+                  <a class="btn os-btn-plain dropdown-toggle" href="#">Shoping cart</a>
 
-                <!--</li>-->
+                </li>
 
-                <!--<li>-->
+                <li>
 
-                  <!--<a class="btn os-btn-plain" href="#">Store</a>-->
+                  <a class="btn os-btn-plain" href="#">Store</a>
 
-                <!--</li>-->
+                </li>
 
-                <!--<li>-->
+                <li>
 
-                  <!--<a class="btn os-btn-plain" href="#">Contact</a>-->
+                  <a class="btn os-btn-plain" href="#">Contact</a>
 
-                <!--</li>-->
+                </li>
 
-              <!--</ul>-->
+              </ul>
 
-              <!--<ul class="navbar-nav">-->
+              <ul class="navbar-nav">
 
-                <!--<li class="nav-item">-->
+                <li class="nav-item">
 
-                  <!--<a class="btn os-btn-plain fa fa-facebook-official" href="#"></a>-->
+                  <a class="btn os-btn-plain fa fa-facebook-official" href="#"></a>
 
-                <!--</li>-->
+                </li>
 
-                <!--<li class="nav-item">-->
+                <li class="nav-item">
 
-                  <!--<a class="btn os-btn-plain fa fa-google-plus-official" href="#"></a>-->
+                  <a class="btn os-btn-plain fa fa-google-plus-official" href="#"></a>
 
-                <!--</li>-->
+                </li>
 
-                <!--<li class="nav-item">-->
+                <li class="nav-item">
 
-                  <!--<a class="btn os-btn-plain fa fa-linkedin-square" href="#"></a>-->
+                  <a class="btn os-btn-plain fa fa-linkedin-square" href="#"></a>
 
-                <!--</li>-->
+                </li>
 
-                <!--<li class="nav-item">-->
+                <li class="nav-item">
 
-                  <!--<a class="btn os-btn-plain fa fa-twitter-square" href="#"></a>-->
+                  <a class="btn os-btn-plain fa fa-twitter-square" href="#"></a>
 
-                <!--</li>-->
+                </li>
 
-                <!--<li class="nav-item">-->
+                <li class="nav-item">
 
-                  <!--<a class="btn os-btn-plain" href="#">Login</a>-->
+                  <a class="btn os-btn-plain" href="#">Login</a>
 
-                <!--</li>-->
+                </li>
 
-              <!--</ul>-->
+              </ul>
 
-          <!--</div>-->
+          </div>
 
-      <!--</nav>-->
+      </nav>
 
         <div class="showcase" id="sliding-up">
 
