reducing page lag

--- a/index.html
+++ b/index.html
@@ -7,23 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Title of the project -->
     <title>Online Store</title>
-    <!--&lt;!&ndash; jQuery library &ndash;&gt;-->
-    <script src="js/jquery.js"></script>
-    <!--<script src="js/jquery-slim.min.js"></script>-->
-    <!--&lt;!&ndash; Poper.js library &ndash;&gt;-->
-    <script src="js/popper.min.js"></script>
-    <!--&lt;!&ndash; Latest compiled and minified Bootstrap JavaScript &ndash;&gt;-->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- Insert dynamic body class script -->
-    <script src="js/dynamic-body-class.js"></script>
+    <script src="js/minified-js/all.js"></script>
     <!-- Custom style of the project -->
     <link rel="stylesheet" href="dev-css/main.css">
-    <!-- Awoke tooltips globaly -->
-    <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-    </script>
 
     <link rel="icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
 
@@ -125,8 +111,14 @@
 
     </div>
 
+    <!-- Awoke tooltips globaly -->
     <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 
+    <script>
         /// ===  On window load add class and scroll up === ///
         window.addEventListener('load', function() {
             document.querySelector(".showcase").classList.add("showDiv");
