--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Title of the project -->
     <title>Online Store</title>
+    <!-- Adding JavaScript -->
     <script src="js/minified-js/all.js"></script>
     <!-- Custom style of the project -->
     <link rel="stylesheet" href="dev-css/main.css">
-
+    <!-- Adding favicon -->
     <link rel="icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
-
   </head>
 
 
@@ -117,7 +117,7 @@
             $('[data-toggle="tooltip"]').tooltip()
         })
     </script>
-
+    <!-- Adding animation on page load -->
     <script>
         /// ===  On window load add class and scroll up === ///
         window.addEventListener('load', function() {
