--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Title of the project -->
     <title>Online Store</title>
+    <!-- Adding JavaScript -->
+    <script src="js/minified-js/all.js"></script>
     <!-- Custom style of the project -->
     <link rel="stylesheet" href="dev-css/main.css">
     <!-- Adding favicon -->
@@ -109,9 +111,9 @@
 
     </div>
 
+    <script src="js/my-custom-js.js"></script>
+    <script src="js/dynamic-body-class.js"></script>
 
-    <!-- Adding JavaScript -->
-    <script src="js/minified-js/all.js"></script>
   </body>
 
 </html>
